<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab1_pkg</name>
  <version>0.0.0</version>
  <description>lab 1</description>
  <maintainer email="yashwanth@todo.todo">yashwanth</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build Dependencies -->
  <build_depend>ament_cmake</build_depend>
  <build_depend>ament_python</build_depend>
  <build_depend>rosidl_default_generators</build_depend> <!-- Needed for ROSIDL types (for ackermann_msgs) -->


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
